--- a/style1.css
+++ b/style1.css
@@ -2,7 +2,6 @@ body{
   margin: 0;
   background-color: #ebe01e;
 }
-
 p{
   margin: 0;
   font-family: Amita;
@@ -28,17 +27,14 @@ ul{
   height: 500px;
   background-image: url(happy.jpg);
   background-repeat: no-repeat;
-  background-attachment: fixed;
   background-size: cover;
   width: 100%;
-  position: relative;
 }
 .sad{
   margin: 0;
   height: 500px;
   background-image: url(sad.jpg);
   background-repeat: no-repeat;
-  background-attachment: fixed;
   background-size: cover;
   width: 100%;
 }
@@ -47,16 +43,14 @@ ul{
   height: 500px;
   background-image: url(angry.jpg);
   background-repeat: no-repeat;
-  background-attachment: fixed;
   background-size: cover;
   width: 100%;
 }
 .neutral{
   margin: 0;
-  height: auto;
+  height: 500px;
   background-image: url(neutral.jpg);
   background-repeat: no-repeat;
-  background-attachment: fixed;
   background-size: cover;
   width: 100%;
 }
@@ -66,11 +60,8 @@ ul{
   width: 100%;
 }
 .h{
-  margin: 0;
-  margin-left: 500px;
-  width: 350px;
-  height: 300px;
-  margin-top: 100px;
+  margin: auto;
+  width: 100%;
   position: relative;
 }
 .hh{
@@ -109,7 +100,7 @@ ul{
   margin: 0;
   font-family: Amita;
   font-size: 25px;
-  color: black;
+  color: white;
 }
 .p2{
   font-size: 10px;
