--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
 body{
   margin: 0;
-  background-image: url(pic1.jpg);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
+  background-color: #000033;
   width: 100%;
 }
 a{
